change z-index to positive numbers to adderss rendering issues up the component chain

--- a/client/src/components/InboxUserProfilesGroup/InboxUserProfilesGroup.css
+++ b/client/src/components/InboxUserProfilesGroup/InboxUserProfilesGroup.css
@@ -3,16 +3,16 @@
   position: relative;
 }
 .InboxUserProfilesGroup__profile-picture:first-child {
-  z-index: 0;
+  z-index: 3;
 }
 .InboxUserProfilesGroup__profile-picture:nth-child(2) {
   position: absolute;
   left: 2.5rem;
-  z-index: -1;
+  z-index: 2;
 }
 .InboxUserProfilesGroup__extra-users,
 .InboxUserProfilesGroup__profile-picture:nth-child(3) {
   position: absolute;
   left: 5rem;
-  z-index: -2;
+  z-index: 1;
 }
